# mylangrobot

./: README.md  pyproject.toml
configs/: settings.yml
data/mycobot/: mycobot.urdf
mylangrobot/: annotator.py  gpt4v.py  operator.py  prompt.py  robot_controller.py  utils.py
scripts/: demo.py  imageproc_demo.py  oneshot_demo.py  visualize_mycobot.py
